# monitor-toggle

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
.claude/: settings.json
data/: spatricius-monitor-toggle.desktop
spatricius_monitor_toggle/: __main__.py  app.py  config.py  constants.py  dbus_service.py  display_backend.py  edid.py  icon.py  introspection.py  kscreen.py  lock.py  mutter_display_config.py  outputs_common.py  xrandr.py
